[FIX] web: Dialog Form buttons' spacing
This commit applies the proper spacing between FormView's buttons in a
Dialog's footer.

Steps to reproduce:
- Open Notes
- Enable debug mode
- In Debug menu, open "Edit View: List"
=> dialog's buttons have no spacing

closes odoo/odoo#101974

X-original-commit: f67a8fff6c86a67ce2f6a162f1de992fe25eefbd

--- a/addons/web/static/src/core/dialog/dialog.scss
+++ b/addons/web/static/src/core/dialog/dialog.scss
@@ -1,7 +1,7 @@
 .modal.o_technical_modal .modal-footer {
     // FIXME: These selectors should not be necessary if we used buttons
     // as direct children of the modal-footer as normally required
-    footer {
+    footer, .o_form_buttons_edit, .o_form_buttons_view {
         display: flex;
         flex-wrap: wrap;
         flex: 1 1 auto;
